testsuite/tests/grammar/invalid_error_node/common.lkt
from lexer_example import foo_lexer
from test import ErrorDecl

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(Example(@Example) | skip(ErrorDecl))
}

@abstract class FooNode implements Node[FooNode] {
}

@with_abstract_list class Example : FooNode implements TokenNode {
}
